[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentpulse-sdk"
version = "0.1.0"
description = "Lightweight monitoring for indie AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Marcus", email = "marcus.builds.things@gmail.com" }]
keywords = ["ai", "agent", "monitoring", "observability", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]

[project.urls]
Homepage = "https://agentpulse.dev"
Repository = "https://github.com/marcusbuildsthings-droid/agentpulse"
Documentation = "https://docs.agentpulse.dev"
