[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentpulse-sdk"
version = "0.1.0"
description = "Zero-config agent observability SDK — auto-captures LLM calls, costs, and traces"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "AgentPulse", email = "hello@agentpulse.dev" }]
keywords = ["agents", "observability", "llm", "openai", "anthropic", "tracing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.scripts]
agentpulse = "agentpulse.cli:main"

[project.urls]
Homepage = "https://agentpulse.dev"
Documentation = "https://docs.agentpulse.dev"
Repository = "https://github.com/agentpulse/sdk-python"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21", "mypy>=1.0"]

[tool.hatch.build.targets.wheel]
packages = ["agentpulse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
